--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,14 +5,49 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".MainActivity">
-
-    <TextView
-        android:layout_width="wrap_content"
+    <androidx.appcompat.widget.SearchView
+        android:id="@+id/searchview"
+        android:layout_width="match_parent"
+        android:layout_marginVertical="25dp"
         android:layout_height="wrap_content"
-        android:text="Hello World!"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintBottom_toTopOf="@id/container_checkbox"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
 
+    </androidx.appcompat.widget.SearchView>
+
+    <LinearLayout
+        android:id="@+id/container_checkbox"
+        app:layout_constraintTop_toBottomOf="@id/searchview"
+        android:layout_width="match_parent"
+        app:layout_constraintBottom_toTopOf="@id/rv_doctor"
+        android:weightSum="2"
+        android:background="@drawable/rounded_corner_view"
+        android:layout_height="wrap_content">
+
+        <com.google.android.material.checkbox.MaterialCheckBox
+            android:layout_width="wrap_content"
+            android:text="@string/Female"
+            android:layout_weight="1"
+            android:layout_height="wrap_content">
+
+        </com.google.android.material.checkbox.MaterialCheckBox>
+        <com.google.android.material.checkbox.MaterialCheckBox
+            android:layout_width="wrap_content"
+            android:text="@string/Male"
+            android:layout_weight="1"
+            android:layout_height="wrap_content">
+
+        </com.google.android.material.checkbox.MaterialCheckBox>
+    </LinearLayout>
+
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/rv_doctor"
+        android:layout_width="match_parent"
+        app:layout_constraintTop_toBottomOf="@id/container_checkbox"
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_height="0dp">
+
+    </androidx.recyclerview.widget.RecyclerView>
 </androidx.constraintlayout.widget.ConstraintLayout>
